desenv_tests/test-assets/field/failure/non_existing_field_modifier.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(non_existing = ',')]
    field: String
}

fn main(){}